tests/baselines/reference/interfaceWithPrivateMember.errors.txt
interfaceWithPrivateMember.ts(4,5): error TS1070: 'private' modifier cannot appear on a type member.
interfaceWithPrivateMember.ts(8,5): error TS1070: 'private' modifier cannot appear on a type member.
interfaceWithPrivateMember.ts(12,5): error TS1070: 'private' modifier cannot appear on a type member.


==== interfaceWithPrivateMember.ts (3 errors) ====
    // interfaces do not permit private members, these are errors
    
    interface I {
        private x: string;
        ~~~~~~~
!!! error TS1070: 'private' modifier cannot appear on a type member.
    }
    
    interface I2<T> {
        private y: T;
        ~~~~~~~
!!! error TS1070: 'private' modifier cannot appear on a type member.
    }
    
    var x: {
        private y: string;
        ~~~~~~~
!!! error TS1070: 'private' modifier cannot appear on a type member.
    }